Update dependencies: Bazel, Spring Boot, Protobuf
Update Bazel baseline to 5.1.0. Update Spring Boot to 2.6.6 and Protobuf
to 3.20.0. Update other Java dependencies to the latest available.

Change-Id: I0dd113e19e4c8b56d1a401eba0bdab1ef0ac2544